# io_face

./: .gitignore  .gitmodules  README.md
doc/: _index.md
firmware/: CMakeLists.txt  firmware.code-workspace  sdkconfig.default
firmware/main/: CMakeLists.txt  main.cpp  pinout.hpp
firmware/main/communication/: can.cpp  commands.h
firmware/main/display/: decode_image.c  decode_image.h  lcd.cpp  lcd.hpp  spi.cpp  spi.hpp
firmware/main/servo/: ears.cpp  servo.cpp
schematic/io_face/: io_face.kicad_prl  io_face.kicad_pro  io_face.kicad_sch  sym-lib-table
